# TEMPLATE_VCPKG_OpenCV_FMT

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp
